--- a/WhiteBears/Views/Project/TaskDetailView.cshtml
+++ b/WhiteBears/Views/Project/TaskDetailView.cshtml
@@ -6,7 +6,7 @@
         <!-- Modal content-->
         <div class="modal-content">
             <div class="modal-header">
-                <h4 class="modal-title">Task</h4>
+                <h4 class="modal-title text-center">Task</h4>
 
                 <button type="button" class="close" data-dismiss="modal">&times;</button>
             </div>
@@ -19,49 +19,55 @@
 
                 </div>
                 <hr />
+             
+                <div class="container-fluid">
+                    <div class="row">
+                        <div class="Contain">
+                            <!-- Task Title -->
+                            <div class="form-group row">
+                                <Label for="taskTitle">Title: </Label>
+                                <text id="taskDetailTitle" name="taskDetailTitle"></text>
+                            </div>
 
-                <!-- Task Id -->
-                <!-- Task Title -->
-                <div class="form-group row">
-                    <Label for="taskTitle">Title</Label>
-                    <text id="taskTitle" name="taskTitle"></text>
-                </div>
+                            <!-- Task Description -->
+                            <div class="form-group row">
+                                <Label for="taskDescription">Description: </Label>
+                                <text id="taskDetailDescription" name="taskDetailDescription"></text>
+                            </div>
 
-                <!-- Task Description -->
-                <div class="form-group row">
-                    <Label for="taskDescription">Description</Label>
-                    <text id="taskDescription" name="taskDescription"></text>
-                </div>
+                            <!-- Task StartDate -->
+                            <div class="form-group row">
+                                <Label for="taskStartDate">Start Date: </Label>
+                                <text id="taskDetailStartDate" name="taskDetailStartDate"></text>
+                            </div>
 
-                <!-- Task StartDate -->
-                <div class="form-group row">
-                    <Label for="taskStartDate">Start Date</Label>
-                    <text id="taskStartDate" name="taskStartDate"></text>
-                </div>
-
-                <!-- Task DueDate -->
-                <div class="form-group row">
-                    <Label for="taskDueDate">Due Date</Label>
-                    <text id="taskDueDate" name="taskDueDate"></text>
-                </div>
-
-
-                <!-- Task Completion Date -->
-                <div class="form-group row">
-                    <Label for="taskCompletionDate">Completion Date</Label>
-                    <text id="taskCompletionDate" name="taskCompletionDate"></text>
-                </div>
-
-                <!-- Task Priority -->
+                            <!-- Task DueDate -->
+                            <div class="form-group row">
+                                <Label for="taskDueDate">Due Date: </Label>
+                                <text id="taskDetailDueDate" name="taskDetailDueDate"></text>
+                            </div>
 
 
-                <div class="modal-footer">
-                   
-                </div>
+                            <!-- Task Completion Date -->
+                            <div class="form-group row">
+                                <Label for="taskCompletionDate">Completion Date: </Label>
+                                <text id="taskDetailCompletionDate" name="taskDetailCompletionDate"></text>
+                            </div>
 
-            </div> <!-- Modal Body Ends here -->
+                            <!-- Task Priority -->
+                            <div class="form-group row">
+                                <Label for="taskPriority">Priority: </Label>
+                                <text id="taskPriority" name="taskPriority"></text>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
 
-        </div> <!-- Modal Content Ends here -->
-    </div>
+                    </div>
+
+                </div> <!-- Modal Body Ends here -->
+            </div>
+                </div> <!-- Modal Content Ends here -->
+            </div>
 </div>
 
