--- a/WhiteBears/Views/Blob/Index.cshtml
+++ b/WhiteBears/Views/Blob/Index.cshtml
@@ -5,8 +5,8 @@
 }
 
 <div class="container">
-    @Html.ActionLink("Upload to Azure Blob","UploadBlob", new { controller = "Blob"}, new { @class = "btn btn-link"})
-
+    <button class="btn btn-secondary" onclick="location.href='@Url.Action("Index", "AdminPage")'">Back</button><br />
+    @Html.ActionLink("Upload to Azure Blob", "UploadBlob", new { controller = "Blob" }, new { @class = "btn btn-link" })
     <div>
         <table id="tablex" class="table table-striped table-responsive">
             <thead>
@@ -31,7 +31,6 @@
                             <td>
                                 <input type="submit" href="#" class="btn btn-link" id="btndel" value="Remove" data-id="@item.ActualFileName" />
                             </td>
-
                         </tr>
 
                     }
