--- a/WhiteBears/Views/Project/ProjectNotesEditView.cshtml
+++ b/WhiteBears/Views/Project/ProjectNotesEditView.cshtml
@@ -41,7 +41,7 @@
 
 
 
-                        <!-- CompletionDate Label -->
+                        <!-- CompletionDate Label 
                         <div class="form-group row">
                           
                                 <label for="CompletionDate" class="col-sm-4 col-form-label text-left">Completion Date</label>
@@ -50,6 +50,7 @@
                                 <input id="editProjectNotesCompletionDate" value="" name="editProjectNotesCompletionDate" type="date" required />
                             </div>
                         </div>
+                            -->
 
                         <!-- To -->
                         <div class="form-group row">
